<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyPortfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login_btn_string">LOGIN</string>
    <string name="sign_btn_string">SIGNUP</string>
    <string name="edit_username">username</string>
    <string name="edit_password">password</string>
    <string name="edit_confirm">confirm</string>
    <string name="login_title">LOGIN</string>
    <string name="sign_title">SIGNUP</string>
    <string name="sign">Dont have a account?</string>
    <string name="sign_txt"><u>Sign up now</u></string>
</resources>
