<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a9a9a9"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sign_title"
        android:textColor="#696969"
        android:textSize="28sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_sign_view"
        android:gravity="center" >

        <EditText
            android:id="@+id/sign_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/edit"
            android:ems="10"
            android:hint="@string/edit_username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:paddingEnd="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="3dp"
            android:paddingStart="5dp"
            android:paddingTop="3dp" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_sign_view"
        android:gravity="center" >

        <EditText
            android:id="@+id/sign_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/edit"
            android:ems="10"
            android:hint="@string/edit_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:paddingEnd="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="3dp"
            android:paddingStart="5dp"
            android:paddingTop="3dp" >
            
        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_sign_view"
        android:gravity="center" >

        <EditText
            android:id="@+id/sign_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/edit"
            android:ems="10"
            android:hint="@string/edit_confirm"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:paddingEnd="3dp"
            android:paddingLeft="5dp"
            android:paddingRight="3dp"
            android:paddingStart="5dp"
            android:paddingTop="3dp" >
            
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_btn_selector"
        android:text="@string/sign_btn_string"
        android:textColor="#ffffff"
        android:textSize="25sp" />

</LinearLayout>
